# ekg-app

./: .gitignore  CMakeLists.txt  ECGEmulator.qml  EKGViewer.qml  Main.qml  ecgemulate.cpp  ecgemulate.h  ecgloader.cpp  ecgloader.h  ecgserial.cpp  ecgserial.h  ecgsql.cpp  ecgsql.h  env.cpp  env.h  first_patient_data.hdf5  logger.cpp  logger.h  main.cpp
Leads/: AllLeads.qml  LeadAVF.qml  LeadAVL.qml  LeadAVR.qml  LeadI.qml  LeadII.qml  LeadIII.qml  LeadV1.qml  LeadV2.qml  LeadV3.qml  LeadV4.qml  LeadV5.qml  LeadV6.qml
headers/hdf5/: H5pubconf.h
headers/highfive/: highfive.hpp
headers/highfive/bits/: h5g_wrapper.hpp
src/handlers/: datasetmodel.cpp  datasetmodel.h  hdf5_handler.cpp  hdf5_handler.h
